Kubernetes/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend-frontend
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: server.devops.com
    http:
      paths:
      - path: /freelance
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
  - host: client.devops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
